Fri Dec 19 15:30:31 2003  George Lebl <jirka@5z.com>

	* gui/gdmsetup.c: remove the default size setting on the file
	  chooser to fix bug #129116

Fri Dec 19 12:28:10 2003  George Lebl <jirka@5z.com>

	* daemon/xdmcp.c: protect the sys/sockio.h include with
	  the HAVE_SYS_SOCKIO_H define check to fix compilation on linux

Fri Dec 19 12:22:18 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.h, daemon/*.c, gui/*.c: use VE_IGNORE_EINTR instead
	  of IGNORE_EINTR and use this on more calls which can still
	  apparently fail with EINTR on completely braindead systems.
	  EINTR is evil.  It is PURE EVIL I tell you!

Mon Dec 17  Brian Cameron <Brian.Cameron@Sun.COM>

	* configure.in
	Now use -lresolv when building on Solaris so that inet_aton can be
	found.

Mon Dec 15  Brian Cameron <Brian.Cameron@Sun.COM>

	* daemon/xdmcp.c:
	Add include of <sys/sockio.h> which is needed on Solaris in order
	to reference SIOCGIFCONF and SIOCGIFFLAGS.

Fri Dec 12 17:56:58 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch], daemon/slave.c, daemon/xdmcp.c, docs/C/gdm.xml:
	  add a GO fifo SOP command and a --wait-for-go command line option.
	  This is intended to allow an initialization script to start X
	  early and have that be the GDM display, but not allow users to
	  log in until it's ready.

Fri Dec 12 17:14:41 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.h, gui/gdmlogin.c, gui/greeter/greeter.c,
	  config/gdm.conf.in, docs/C/gdm.xml: There's now the ability to
	  reap flexiservers that are inactive for a period of time.  The
	  default time is 5 minutes.

	* gui/gdmcomm.c: add the new error codes (7 and 200) to the error
	  message table

Fri Dec 12 09:36:34 2003  George Lebl <jirka@5z.com>
 
        * gui/gdmcomm.c: check ownership of /tmp/.gdm_socket before using

Wed Dec 10 18:40:48 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.[ch]: append a '!' to the action which was previously
	  selected (if one was)

Wed Dec 10 15:44:53 2003  George Lebl <jirka@5z.com>
