@@ -40,3 +40,6 @@
 #undef HAVE_SCHED_YIELD
 #undef ENABLE_IPV6
 #undef HAVE_SELINUX
+#undef HAVE_PASSWDEXPIRED
+#undef HAVE_CHPASS
+#undef HAVE_LOGINRESTRICTIONS
