@@ -1,3 +1,11 @@
+Fri Dec 19 15:44:03 2003  George Lebl <jirka@5z.com>
+
+	* configure.in, acconfig.h, daemon/verify-(crypt|shadow).c: Massage
+	  and then apply a patch from Vincent Berger
+	  <vincent.berger@ext.bull.net> to add password expiration and
+	  checking in the crypt/shadow code, at least on AIX.  Fixes
+	  #123766
+
 Fri Dec 19 15:30:31 2003  George Lebl <jirka@5z.com>
 
 	* gui/gdmsetup.c: remove the default size setting on the file
